--- a/Source/Caracal.Voting.Web/Web.config
+++ b/Source/Caracal.Voting.Web/Web.config
@@ -1,11 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-Web.config file for Caracal.Voting.Web.
-
-The settings that can be used in this file are documented at 
-http://www.mono-project.com/Config_system.web and 
-http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
--->
 <configuration>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
@@ -26,6 +19,18 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
