--- a/Source/Caracal.Voting.Web/tsconfig.json
+++ b/Source/Caracal.Voting.Web/tsconfig.json
@@ -10,9 +10,11 @@
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
   },
-  "exclude": [
-    "node_modules/*",
-    "node_modules",
-    "**/*-aot.ts"
-  ]
+  "include": [
+        "src/**/*"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
+    ]
 }
