--- a/Source/Caracal.Voting.Web/tsconfig.json
+++ b/Source/Caracal.Voting.Web/tsconfig.json
@@ -10,11 +10,8 @@
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
   },
-  "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules",
-        "**/*.spec.ts"
-    ]
+  "exclude": [
+    "**/node_modules/*",
+    "**/*.spec.ts"
+  ]
 }
