--- a/Source/Caracal.Voting.Web/tsconfig.json
+++ b/Source/Caracal.Voting.Web/tsconfig.json
@@ -11,7 +11,6 @@
     "suppressImplicitAnyIndexErrors": true
   },
   "exclude": [
-    "**/node_modules/*",
-    "**/*.spec.ts"
+    "node_modules"
   ]
 }
