--- a/Source/Caracal.Voting.Web/tsconfig.json
+++ b/Source/Caracal.Voting.Web/tsconfig.json
@@ -10,7 +10,9 @@
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
   },
+  "compileOnSave": true,
   "exclude": [
-    "node_modules"
+    "node_modules/*",
+    "**/*-aot.ts"
   ]
 }
