--- a/Source/Caracal.Voting.Web/package.json
+++ b/Source/Caracal.Voting.Web/package.json
@@ -26,6 +26,8 @@
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
+    "typescript": "2.0.3",
+    "typings":"1.4.0"
   },
   "repository": {}
 }
